--- a/languages/cpp/cpp-vscode.conf/c_cpp_properties.json
+++ b/languages/cpp/cpp-vscode.conf/c_cpp_properties.json
@@ -2,7 +2,9 @@
 	"configurations": [
 		{
 			"name": "Linux",
-			"includePath": ["${workspaceFolder}/**"],
+			"includePath": [
+				"${workspaceFolder}/**"
+			],
 			"defines": [],
 			"compilerPath": "/usr/bin/gcc",
 			"cStandard": "gnu17",
